Changed a couple progress bar values and removed the freelance sections

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
               <p>I'm</p>
               <h1>Andrea Cacioli</h1>
               <h2></h2>
-              <div class="typed-text">Computer Science Student, Microcontrollers Enthusiast, Unix Lover, Version Control
-                Ninja, Videogames Player</div>
+              <div class="typed-text">AI Student, Computer Science Student, Microcontrollers Enthusiast, Unix Lover,
+                Version Control
+                Ninja, Videogames Player, Projects Starter</div>
             </div>
             <div class="hero-btn">
               <a class="btn" href="mailto:andrea.cacioli.1c@gmail.com">Hire Me</a>
@@ -103,7 +104,7 @@
           <div class="about-content">
             <div class="section-header text-left">
               <p>Learn About Me</p>
-              <h2>UniTo Student</h2>
+              <h2>@UniTo Student</h2>
             </div>
             <div class="about-text">
               <p>
@@ -116,6 +117,14 @@
             </div>
             <div class="skills">
               <div class="skill-name">
+                <p>Artificial Intelligence</p>
+                <p>90%</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+              <div class="skill-name">
                 <p>Version Control</p>
                 <p>85%</p>
               </div>
@@ -125,14 +134,14 @@
               </div>
               <div class="skill-name">
                 <p>Web Development</p>
-                <p>50%</p>
+                <p>90%</p>
               </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
               <div class="skill-name">
-                <p>Unix/Back-End</p>
+                <p>Unix</p>
                 <p>90%</p>
               </div>
               <div class="progress">
@@ -141,31 +150,18 @@
               </div>
               <div class="skill-name">
                 <p>Embedded Software</p>
-                <p>80%</p>
+                <p>60%</p>
               </div>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
-              <div class="about-text" style="margin-top: 10px;">
-                <p>
-                  Here are some things I know very little about and would like to learn in the near future.
-                </p>
-              </div>
               <div class="skill-name">
                 <p>Game Development</p>
-                <p>20%</p>
+                <p>40%</p>
               </div>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-              <div class="skill-name">
-                <p>Artificial Intelligence</p>
-                <p>1%</p>
-              </div>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -322,27 +318,6 @@
   </div>
   <!-- Job Experience End -->
 
-
-  <!-- Banner Start -->
-  <div class="banner wow zoomIn" data-wow-delay="0.1s">
-    <div class="container">
-      <div class="section-header text-center">
-        <p>Reasonable Price</p>
-        <h2>Get A <span>Special</span> Price</h2>
-      </div>
-      <div class="container banner-text">
-        <p>
-          You can write me an email to ask me for a specific project you're working on and I can provide you with an
-          affordable price. The price would be decided based on the size of the project, the difficulty of it and on how
-          time consuming it'll be.
-        </p>
-        <a class="btn" href="#price">Average Plans</a> <!-- TODO: Add smooth transition -->
-      </div>
-    </div>
-  </div>
-  <!-- Banner End -->
-
-
   <!-- Portfolio Start -->
   <div class="portfolio" id="portfolio">
     <div class="container">
@@ -443,123 +418,6 @@
   </div>
   <!-- Portfolio End -->
 
-
-  <!-- Banner Start -->
-  <div class="banner wow zoomIn" data-wow-delay="0.1s">
-    <div class="container">
-      <div class="section-header text-center">
-        <p>Awesome Discount</p>
-        <h2>Get <span>30%</span> Discount</h2>
-      </div>
-      <div class="container banner-text">
-        <p>
-          For a limited amount of time I will be making sites that look like this with a 30% discount. Obviously, the
-          final price will depend on the overall size of the website.
-        </p>
-        <a class="btn" href="#price">Order Now</a>
-      </div>
-    </div>
-  </div>
-  <!-- Banner End -->
-
-
-  <!-- Price Start -->
-  <div class="price" id="price">
-    <div class="container">
-      <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-        <p>Pricing Plan</p>
-        <h2>My Prices</h2>
-      </div>
-      <div class="row">
-        <div class="col-md-4 wow fadeInUp" data-wow-delay="0.5s">
-          <div class="price-item">
-            <div class="price-header">
-              <div class="price-title">
-                <h2>Tutoring</h2>
-              </div>
-              <div class="price-prices">
-                <h2><small>€</small>25<span>/ hr</span></h2>
-              </div>
-            </div>
-            <div class="price-body">
-              <div class="price-description">
-                <ul>
-                  <li>Clear</li>
-                  <li>Experienced</li>
-                  <li>Motivated</li>
-                  <li>Every Scientific Subject</li>
-                  <li>Available Everyday</li>
-                </ul>
-              </div>
-            </div>
-            <div class="price-footer">
-              <div class="price-action">
-                <a class="btn" href="mailto:andrea.cacioli.1c@gmail.com?subject=Tutoring Reservation">I want you!</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 wow fadeInUp" data-wow-delay="0.0s">
-          <div class="price-item featured-item">
-            <div class="price-header">
-              <div class="price-title">
-                <h2>Simple Offline App</h2>
-              </div>
-              <div class="price-prices">
-                <h2><small>€</small>299</h2>
-              </div>
-            </div>
-            <div class="price-body">
-              <div class="price-description">
-                <ul>
-                  <li>C / C# / C++ / Java / Python</li>
-                  <li>Fast Delivery</li>
-                  <li>Optimised</li>
-                  <li>Well Documented</li>
-                  <li>Easy To Use</li>
-                </ul>
-              </div>
-            </div>
-            <div class="price-footer">
-              <div class="price-action">
-                <a class="btn" href="mailto:andrea.cacioli.1c@gmail.com?subject=Offline App Request">Order Now</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 wow fadeInUp" data-wow-delay="0.5s">
-          <div class="price-item">
-            <div class="price-header">
-              <div class="price-title">
-                <h2>Online App / Website</h2>
-              </div>
-              <div class="price-prices">
-                <h2>Contact Me!</h2>
-              </div>
-            </div>
-            <div class="price-body">
-              <div class="price-description">
-                <ul>
-                  <li>Stunning GUI</li>
-                  <li>Fast And Well-Built</li>
-                  <li>3yrs Warranty</li>
-                  <li>Optimised</li>
-                  <li>Well Documented</li>
-                  <li>Easy To Use</li>
-                </ul>
-              </div>
-            </div>
-            <div class="price-footer">
-              <div class="price-action">
-                <a class="btn" href="mailto:andrea.cacioli.1c@gmail.com?subject=Big Project Information">Order Now</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Price End -->
 
   <!-- Footer Start -->
   <div class="footer wow fadeIn" data-wow-delay="0.3s">
