--- a/ProbabilityCalculator.html
+++ b/ProbabilityCalculator.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<style>
+    h5{
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    }
+</style>
+
 <head>
     <meta charset="utf-8">
     <title>Probability Calculator</title>
@@ -117,11 +123,11 @@
                         <input id="MaxX" type="range" min="10" max="40" value="20" oninput="update()">
                     </div>
                     <div>
-                        <label class="options">$c$ (number of copies of the card)</label>
+                        <label class="options">$c$ (card copies)</label>
                         <input id="cInput" type="number" value="4" oninput="update()">
                     </div>
                     <div>
-                        <label class="options">$n$ (total cards in the deck)</label>
+                        <label class="options">$n$  (total cards)</label>
                         <input id="nInput" type="number" value="60" oninput="update()">
                     </div>
                 </div>
